شرح التعديلات يلي عملتها

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -9,6 +9,7 @@
   --font-family: "Cairo", sans-serif;
   --tail-text-color: #000000b2;
   --text-color-2: #454545;
+  --icons-color: #888888;
 }
 
 body {
