--- a/src/styles/Sidebar.css
+++ b/src/styles/Sidebar.css
@@ -71,10 +71,12 @@
   width: 50px;
   height: auto;
 }
+
 .head-dash {
   display: flex;
   align-items: center;
 }
+
 .title-dash {
   margin: 0;
   display: flex;
@@ -85,6 +87,7 @@
   color: var(--text-color-2);
   margin-left: 50px;
 }
+
 .close-icon {
   width: 24px;
   height: 24px;
@@ -98,7 +101,7 @@
   list-style: none;
   padding: 0;
   margin: 0;
-  height: calc(100vh - 120px); /* ارتفاع الشاشة ناقص ارتفاع الهيدر */
+  height: calc(100vh - 120px); /* ارتفاع الشاشة ناقص الهيدر */
   overflow: hidden;
 }
 
@@ -107,15 +110,22 @@
   align-items: center;
   padding: 12px 15px;
   cursor: pointer;
-  transition: background-color 0.3s;
   font-size: 15px;
   color: var(--icons-color);
   line-height: 150%;
   font-weight: 700;
   margin-bottom: 10px;
+  border-radius: 12px;
+  transition: background-color 0.4s ease, color 0.4s ease, transform 0.3s ease;
 }
+
+.sidebar .sidebar-menu li:hover {
+  background-color: #ecf8fd;
+}
+
 .side-icons {
   color: var(--icons-color);
+  transition: color 0.4s ease;
 }
 
 .sidebar .sidebar-menu li svg {
@@ -128,9 +138,10 @@
   color: var(--primary-color);
   border-radius: 12px;
   position: relative;
-  transition: all 0.3s ease;
+  transition: background-color 0.4s ease, color 0.4s ease;
 }
+
 .sidebar .sidebar-menu li.active .side-icons {
   color: var(--primary-color);
-  transition: all 0.3s ease;
+  transition: color 0.4s ease;
 }
