--- a/src/styles/Products.css
+++ b/src/styles/Products.css
@@ -65,6 +65,12 @@
 .search-bar input::placeholder {
   color: var(--primary-color);
 }
+.left-buttons {
+  display: flex;
+}
+.bt-filter {
+  margin-left: 20px;
+}
 .search-icon {
   position: absolute;
   left: 8px;
