--- a/src/styles/Products.css
+++ b/src/styles/Products.css
@@ -29,19 +29,24 @@
   padding: 7px 12px;
   border-radius: 12px;
   border: none;
+  background-color: var(--primary-color);
+  color: white;
   font-size: 13px;
   font-weight: bold;
   font-family: var(--font-family);
   cursor: pointer;
+  text-decoration: none;
+  align-items: center;
+  gap: 5px;
   -webkit-border-radius: 12px;
   -moz-border-radius: 12px;
   -ms-border-radius: 12px;
   -o-border-radius: 12px;
 }
 
-.btn-add-product {
-  background-color: var(--primary-color);
-  color: white;
+.btn-add-product:hover {
+  text-decoration: none;
+   color: white;
 }
 
 .search-bar {
